<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="description_post_cancel">Cancel editing</string>
    <string name="post_shared">Post shared</string>
    <string name="description_post_views">Number of views</string>
    <string name="main_text">Main text</string>
    <string name="video_cover">Video cover</string>
    <string name="play_video">Play video</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="hint_post_content">Enter post text...</string>
    <string name="retry">Retry</string>
    <string name="new_posts_count">New entries: %1$d</string>
    <string name="login_hint">Login</string>
    <string name="pass_hint">Password</string>
    <string name="login">log in</string>
    <string name="logout">log out</string>


</resources>
