<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:src="@drawable/ic_netology_48dp"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/content"
        tools:srcCompat="@sample/posts.json/data/authorAvatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintEnd_toStartOf="@+id/options"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/author"
        app:layout_constraintStart_toStartOf="@+id/author"
        app:layout_constraintEnd_toEndOf="@+id/author"
        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,options" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.5"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />


    <ImageButton
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/text_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_like"
        android:src="@drawable/ic_like_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footer" />

    <!-- Счетчик лайков -->
    <TextView
        android:id="@+id/likeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="10"
        app:layout_constraintTop_toTopOf="@+id/like"
        app:layout_constraintStart_toEndOf="@+id/like" />

    <!-- Кнопка "Поделиться" -->
    <ImageButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginStart="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_share"
        android:src="@drawable/ic_share_24"
        app:layout_constraintTop_toBottomOf="@id/footer"
        app:layout_constraintStart_toEndOf="@+id/likeCount" />

    <!-- Счетчик репостов -->
    <TextView
        android:id="@+id/shareCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="5"
        app:layout_constraintTop_toTopOf="@+id/share"
        app:layout_constraintStart_toEndOf="@+id/share" />

    <!-- Новая кнопка "Просмотры" -->
    <ImageButton
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/text_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_views"
        android:src="@drawable/ic_views_24"
        app:layout_constraintTop_toBottomOf="@id/footer"
        app:layout_constraintEnd_toStartOf="@id/viewsCount"/>

    <!-- Счетчик просмотров -->
    <TextView
        android:id="@+id/viewsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="15"
        app:layout_constraintTop_toTopOf="@+id/views"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
